--- a/templates/calendars/dhtmlx.html
+++ b/templates/calendars/dhtmlx.html
@@ -10,6 +10,8 @@
         <!-- scheduler -->
         <script src="js/dhtmlx/dhtmlxscheduler.js"
             charset="utf-8"></script>
+        <script src="js/dhtmlx/dhtmlxscheduler_readonly.js"
+            charset="utf-8"></script>
         <script src="js/configure.js"
             charset="utf-8"></script>
         <script src="js/common.js"
