add path prefix (dirty-hack); don't provide specification download

--- a/templates/calendars/dhtmlx.html
+++ b/templates/calendars/dhtmlx.html
@@ -70,7 +70,7 @@
         </div>
         <div class="status-window">
             <a class="item" id="errorStatusIcon" href="javascript:toggleErrorWindow();">!</a>
-            <a class="item" id="infoIcon" href="/about.html{{ get_query_string() | safe }}" target="{{ specification['target'] }}">?</a>
+            <a class="item" id="infoIcon" href="/open-web-calendar/about.html{{ get_query_string() | safe }}" target="{{ specification['target'] }}">?</a>
         </div>
     </body>
 </html>
