--- a/templates/about.html
+++ b/templates/about.html
@@ -13,16 +13,17 @@
     </head>
     <body>
         <header>
-            <a href="/calendar.html{{ get_query_string() | safe }}"><h1>{{ specification["title"] | safe }}</h1></a>
+            <a href="/open-web-calendar/calendar.html{{ get_query_string() | safe }}"><h1>{{ specification["title"] | safe }}</h1></a>
         </header>
         <main>
             <p class="description">
                 {{ specification["description"] or html("description") }}
             </p>
             <ul>
-                <li><a href="/calendar.html{{ get_query_string() | safe }}">{{ html("links-website") }}</a></li>
-                <li><a href="/calendar.ics{{ get_query_string() | safe }}">{{ html("links-ics") }}</a></li>
-                <li><a href="/calendar.spec{{ get_query_string() | safe }}">{{ html("links-spec") }}</a></li>
+
+                <li><a href="/open-web-calendar/calendar.html{{ get_query_string() | safe }}">{{ html("links-website") }}</a></li>
+                <li><a href="/open-web-calendar/calendar.ics{{ get_query_string() | safe }}">{{ html("links-ics") }}</a></li>
+                <li><a href="https://github.com/niccokunzmann/open-web-calendar/">Source Code</a></li>
             </ul>
             <h2>{{ html("project-title") }}</h2>
             <p class="description">
