--- a/templates/calendars/dhtmlx.html
+++ b/templates/calendars/dhtmlx.html
@@ -36,29 +36,33 @@
         <div id="scheduler_here" class="dhx_cal_container"
             style='width:100%; height:100%;'>
             <div class="dhx_cal_navline">
-                {%- if "previous" in specification["controls"] -%}
-                <div class="dhx_cal_prev_button">&nbsp;</div>
+                {%- if specification and specification["controls"] -%}
+                    {%- if "previous" in specification["controls"] -%}
+                    <div class="dhx_cal_prev_button">&nbsp;</div>
+                    {%- endif -%}
+                    {%- if "next" in specification["controls"] -%}
+                    <div class="dhx_cal_next_button">&nbsp;</div>
+                    {%- endif -%}
+                    {%- if "today" in specification["controls"] -%}
+                    <div class="dhx_cal_today_button"></div>
+                    {%- endif -%}
+                    {%- if "date" in specification["controls"] -%}
+                    <div class="dhx_cal_date"></div>
+                    {%- endif -%}
                 {%- endif -%}
-                {%- if "next" in specification["controls"] -%}
-                <div class="dhx_cal_next_button">&nbsp;</div>
-                {%- endif -%}
-                {%- if "today" in specification["controls"] -%}
-                <div class="dhx_cal_today_button"></div>
-                {%- endif -%}
-                {%- if "date" in specification["controls"] -%}
-                <div class="dhx_cal_date"></div>
-                {%- endif -%}
-                {%- if "day" in specification["tabs"] -%}
-                <div class="dhx_cal_tab" name="day_tab"></div>
-                {%- endif -%}
-                {%- if "week" in specification["tabs"] -%}
-                <div class="dhx_cal_tab" name="week_tab"></div>
-                {%- endif -%}
-                {%- if "month" in specification["tabs"] -%}
-                <div class="dhx_cal_tab" name="month_tab"></div>
-                {%- endif -%}
-                {%- if "agenda" in specification["tabs"] -%}
-                <div class="dhx_cal_tab" name="agenda_tab" id="agenda_tab"></div>
+                {%- if specification and specification["tabs"] -%}
+                    {%- if "day" in specification["tabs"] -%}
+                    <div class="dhx_cal_tab" name="day_tab"></div>
+                    {%- endif -%}
+                    {%- if "week" in specification["tabs"] -%}
+                    <div class="dhx_cal_tab" name="week_tab"></div>
+                    {%- endif -%}
+                    {%- if "month" in specification["tabs"] -%}
+                    <div class="dhx_cal_tab" name="month_tab"></div>
+                    {%- endif -%}
+                    {%- if "agenda" in specification["tabs"] -%}
+                    <div class="dhx_cal_tab" name="agenda_tab" id="agenda_tab"></div>
+                    {%- endif -%}
                 {%- endif -%}
             </div>
             <div class="dhx_cal_header"></div>
